cmake_minimum_required(VERSION 3.27)
project(C__)

set(CMAKE_CXX_STANDARD 17)

add_executable(C__
#        main.cpp

        algorithm/排序.cpp

        #        leetcode/test.cpp
#        leetcode/1.两数之和.cpp
#        leetcode/2.两数相加.cpp
#        leetcode/3.无重复字符的最长子串.cpp
#        leetcode/4.寻找两个正序数组的中位数.cpp
#        leetcode/5.最长回文子串.cpp
#        leetcode/6.Z字形变换.cpp
#        leetcode/7.整数反转.cpp
#        leetcode/8.字符串转换整数（atoi）.cpp
#        leetcode/9.回文数.cpp
#        leetcode/10.正则表达式匹配.cpp
#        leetcode/11.盛最多水的容器.cpp
#        leetcode/12.整数转罗马数字.cpp
#        leetcode/13.罗马数字转整数.cpp
#        leetcode/14.最长公共前缀.cpp
#        leetcode/15.三数之和.cpp
#        leetcode/16.最接近的三数之和.cpp
#        leetcode/17.电话号码的字母组合.cpp
#        leetcode/18.四数之和.cpp
#        leetcode/19.删除链表的倒数第N个结点.cpp
#        leetcode/20.有效的括号.cpp
#        leetcode/21.合并两个有序链表.cpp
#        leetcode/22.括号生成.cpp
#        leetcode/23.合并K个升序链表.cpp
#        leetcode/24.两两交换链表中的结点.cpp
#        leetcode/25.K个一组翻转链表.cpp
#        leetcode/26.删除有序数组中的重复项.cpp
#        leetcode/27.移除元素.cpp
#        leetcode/28.找出字符串中第一个匹配项的下标.cpp
#        leetcode/29.两数相除.cpp
#        leetcode/30.串联所有单词的子串.cpp
)
